--- a/DuoEditor/Properties/Resources.resx
+++ b/DuoEditor/Properties/Resources.resx
@@ -142,4 +142,19 @@
   <data name="SplashScreenIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SplashScreenIcon.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Green_Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Green_Icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Red_Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Red_Icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_5112x5112" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\5112x5112.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_5112x512" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\5112x512.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_512x5112" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\512x5112.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
